--- a/index.html
+++ b/index.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="img/Logo-de-PE.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>ARGV | Home</title>
 </head>
 <body>
-    <h1>Projeto de PE</h1>
-    <p>Vinicius de Lucio Porto</p>
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #03588C;">
+        <div class="container-fluid">
+            <a class="navbar-brand text-center" href="index.html">
+                <img src="img/Logo-de-PE.png" alt="Logo" width="40" height="40" class="d-inline-block align-text-top">
+                Bootstrap
+            </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" href="index.html">Home</a>
+              <a class="nav-link" href="financa.html">Finanças</a>
+              <a class="nav-link" href="marketing.html">Marketing</a>
+              <a class="nav-link" href="projeto.html">Projetos</a>
+              <a class="nav-link" href="contato.html">Contato</a>
+              <a class="nav-link" href="perfil.html">Perfil</a>
+            </div>
+          </div>
+        </div>
+    </nav>
+    <nav class="container mt-4 col-md-3" aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item active" aria-current="page">Home</li>
+        </ol>
+    </nav>
+    <div class="container">
+        <div class="jumbotron col-md-12 col-sm-12">
+            <h1 class="display-4">Projeto de Práticas de Empreendedorismo</h1>
+            <p class="lead">Este é um site feito para o projeto da materia de PE, dos alunos do 1ºDS da ETEC Martinho Di Ciero, Itu/SP</p>
+            <hr class="my-4">
+            <p>Tambem será utilizado para uma tarefa de Programação WEB</p>
+            <a class="btn btn-primary btn-lg" href="#" role="button">Leia mais</a>
+          </div>
+        </div>
+
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
