--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a class="btn btn-primary btn-lg" href="#" role="button">Leia mais</a>
         </div>
     </div>
-    <div class="container mt-4">
+    <div class="container mt-4 mb-4">
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">Um pouco sobre nós</h5>
