--- a/marketing.html
+++ b/marketing.html
@@ -25,9 +25,9 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" href="index.html">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
               <a class="nav-link" href="financa.html">Finanças</a>
-              <a class="nav-link" href="marketing.html">Marketing</a>
+              <a class="nav-link active" href="marketing.html">Marketing</a>
               <a class="nav-link" href="projeto.html">Projetos</a>
               <a class="nav-link" href="contato.html">Contato</a>
               <a class="nav-link" href="perfil.html">Perfil</a>
@@ -37,53 +37,70 @@
     </nav>
     <nav class="container mt-4 col-md-3" aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item active" aria-current="page">Home</li>
+          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Marketing</li>
         </ol>
     </nav>
     <div class="container">
-        <div class="jumbotron col-md-12 col-sm-12">
-            <h1 class="display-4">Projeto de Práticas de Empreendedorismo</h1>
-            <p class="lead">Este é um site feito para o projeto da materia de PE, dos alunos do 1ºDS da ETEC Martinho Di Ciero, Itu/SP</p>
-            <hr class="my-4">
-            <p>Tambem será utilizado para uma tarefa de Programação WEB</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Leia mais</a>
+      <div class="row">
+        <div class="col-md-6 col-sm-12">
+          <div class="card">
+            <img class="card-img-top" src="img/Folder_1.png" alt="Folder 1" style="width: 500px; height: 500px;">
+            <div class="card-body">
+              <p class="card-text">Um planfleto que faz propaganda sobre a ONG e nossas informações para contato</p>
+            </div>
+          </div>
         </div>
-    </div>
-    <div class="container mt-4">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Um pouco sobre nós</h5>
-          <p class="card-text">Nossa empresa fictícia para o trabalho de Práticas de Empreendedorismo será 
-            uma ONG com o intuito de elevar o nível de conhecimento e profissionalismo na área 
-            dos esportes, alcançar o nível técnico perdido com o passar do tempo, abrir portas 
-            para aqueles com potencial e para os que não tem muitas condições de ir além.
-          </p>
-          <p>
-            O governo brasileiro investiu cerca de 2 bilhões de reais em esportes em 2021. 
-            Com as Olimpíadas e Paraolimpíadas de Tóquio, o Brasil bateu recorde de medalhas 
-            e viveu fortes emoções com atletas excepcionais. Este ano também reservou 
-            emoções para os estudantes. Após 17 anos, a maior competição escolar do país 
-            voltou a acontecer. Os Jogos Escolares Brasileiros (JEB’s) levaram cerca de seis mil 
-            alunos, de 12 a 14 anos, para competições no Parque Olímpico do Rio de Janeiro, no 
-            mês de novembro.
-          </p>
-          <p>Governo Federal investiu no esporte brasileiro com ações, programas e obras 
-            de infraestrutura e foi a base para um 2021 com recordes e muitos pódios. Este ano, 
-            foram mais de 1.083 infraestruturas consolidadas e entregues e cerca de R$ 2 bilhões 
-            em repasses do Governo Federal para investimentos no esporte. Além disso, foram 
-            mais de 2.500 projetos novos apresentados para a Lei de Incentivo ao Esporte (LIE), 
-            um número recorde.
-          </p>
-            Mesmo assim, quando comparamos o nosso país com os outros países da 
-            América Latina, podemos percebem uma grande diferença nos investimentos na área 
-            esportiva, mesmo países com economias muito piores que a nossa possuem maiores 
-            taxas de investimento.
-          </p>
+        <div class="col-md-6 col-sm-12">
+          <div class="card">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block w-100" src="img/Folder_2_frente.png" alt="Folder 2 frente" style="width: 500px; height: 500px;">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="img/Folder_2_verso.png" alt="Folder 2 verso" style="width: 500px; height: 500px;">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Anterior</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Próximo</span>
+              </a>
+            </div>
+            <div class="card-body">
+              <p class="card-text">Um planfleto que faz propaganda sobre a ONG, mostra os esportes disponiveis e nossas informações para contato</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-4 mb-4">
+        <div class="col-md-6 col-sm-12">
+          <div class="card">
+            <img class="card-img-top" src="img/Logo-de-PE.png" alt="Folder 1" style="width: 500px; height: 500px;">
+            <div class="card-body">
+              <p class="card-text">A logo da nossa instituição</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-sm-12">
+          <div class="card">
+            <img class="card-img-top" src="img/OIP.jpeg" alt="Folder 1" style="width: 500px; height: 425px;">
+            <div class="card-body">
+              <p class="card-text">01001001 01110011 01110011 01101111 00100000 01101110 11100011 01101111 00100000 01110011 01101001 01100111 01101110 01101001 01100110 01101001 01100011 01100001 00100000 01101110 01100001 01100100 01100001 </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
     
-
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
