--- a/projeto.html
+++ b/projeto.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #03588C;">
         <div class="container-fluid">
             <a class="navbar-brand text-center" href="index.html">
-                <img src="img/Logo-de-PE.png" alt="Logo" width="40" height="40" class="d-inline-block align-text-top">
+                <img src="img/Logo-de-PE.png" alt="Logo" width="35" height="35" class="d-inline-block align-text-top">
                 Bootstrap
             </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,10 +25,10 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" href="index.html">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
               <a class="nav-link" href="financa.html">Finanças</a>
               <a class="nav-link" href="marketing.html">Marketing</a>
-              <a class="nav-link" href="projeto.html">Projetos</a>
+              <a class="nav-link active" href="projeto.html">Projetos</a>
               <a class="nav-link" href="contato.html">Contato</a>
               <a class="nav-link" href="perfil.html">Perfil</a>
             </div>
@@ -37,51 +37,19 @@
     </nav>
     <nav class="container mt-4 col-md-3" aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item active" aria-current="page">Home</li>
+          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Projeto</li>
         </ol>
     </nav>
     <div class="container">
         <div class="jumbotron col-md-12 col-sm-12">
-            <h1 class="display-4">Projeto de Práticas de Empreendedorismo</h1>
-            <p class="lead">Este é um site feito para o projeto da materia de PE, dos alunos do 1ºDS da ETEC Martinho Di Ciero, Itu/SP</p>
+            <h1 class="display-4">Em breve...</h1>
+            <p class="lead">Ainda não pensamos a fundo sobre onde iremos fazer nossos primeiros projetos e nem como...</p>
             <hr class="my-4">
-            <p>Tambem será utilizado para uma tarefa de Programação WEB</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Leia mais</a>
+            <p>Em um futuro muito breve iremos atualizar esse seção, então fique atento...</p>
         </div>
     </div>
-    <div class="container mt-4">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Um pouco sobre nós</h5>
-          <p class="card-text">Nossa empresa fictícia para o trabalho de Práticas de Empreendedorismo será 
-            uma ONG com o intuito de elevar o nível de conhecimento e profissionalismo na área 
-            dos esportes, alcançar o nível técnico perdido com o passar do tempo, abrir portas 
-            para aqueles com potencial e para os que não tem muitas condições de ir além.
-          </p>
-          <p>
-            O governo brasileiro investiu cerca de 2 bilhões de reais em esportes em 2021. 
-            Com as Olimpíadas e Paraolimpíadas de Tóquio, o Brasil bateu recorde de medalhas 
-            e viveu fortes emoções com atletas excepcionais. Este ano também reservou 
-            emoções para os estudantes. Após 17 anos, a maior competição escolar do país 
-            voltou a acontecer. Os Jogos Escolares Brasileiros (JEB’s) levaram cerca de seis mil 
-            alunos, de 12 a 14 anos, para competições no Parque Olímpico do Rio de Janeiro, no 
-            mês de novembro.
-          </p>
-          <p>Governo Federal investiu no esporte brasileiro com ações, programas e obras 
-            de infraestrutura e foi a base para um 2021 com recordes e muitos pódios. Este ano, 
-            foram mais de 1.083 infraestruturas consolidadas e entregues e cerca de R$ 2 bilhões 
-            em repasses do Governo Federal para investimentos no esporte. Além disso, foram 
-            mais de 2.500 projetos novos apresentados para a Lei de Incentivo ao Esporte (LIE), 
-            um número recorde.
-          </p>
-            Mesmo assim, quando comparamos o nosso país com os outros países da 
-            América Latina, podemos percebem uma grande diferença nos investimentos na área 
-            esportiva, mesmo países com economias muito piores que a nossa possuem maiores 
-            taxas de investimento.
-          </p>
-        </div>
-      </div>
-    </div>
+    
     
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
