--- a/marketing.html
+++ b/marketing.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Vinicius Porto" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
+		<meta name="keywords" content="ONG, esportes, ARGV, PE, Empreendedorismo, Praticas de Empreendedorismo, Vinicius Porto.">
+		<meta name="description" content="Uma ONG com o intuito de elevar o nível de conhecimento e profissionalismo na área dos esportes, alcançar o nível técnico perdido com o passar do tempo, abrir portas para aqueles com potencial e para os que não tem muitas condições de ir além.">
     <link rel="shortcut icon" href="img/Logo-de-PE.png" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <title>ARGV | Home</title>
+    <title>ARGV | Marketing</title>
 </head>
 <body>
   <style>
@@ -17,7 +21,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #03588C;">
         <div class="container-fluid">
             <a class="navbar-brand text-center" href="index.html">
-                <img src="img/Logo-de-PE.png" alt="Logo" width="40" height="40" class="d-inline-block align-text-top">
+                <img src="img/Logo-de-PE.png" alt="Logo" width="35" height="35" class="d-inline-block align-text-top">
                 Bootstrap
             </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
