--- a/perfil.html
+++ b/perfil.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Vinicius Porto" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
+		<meta name="keywords" content="ONG, esportes, ARGV, PE, Empreendedorismo, Praticas de Empreendedorismo, Vinicius Porto.">
+		<meta name="description" content="Uma ONG com o intuito de elevar o nível de conhecimento e profissionalismo na área dos esportes, alcançar o nível técnico perdido com o passar do tempo, abrir portas para aqueles com potencial e para os que não tem muitas condições de ir além.">
     <link rel="shortcut icon" href="img/Logo-de-PE.png" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <title>ARGV | Home</title>
+    <title>ARGV | Perfil</title>
 </head>
 <body>
   <style>
@@ -25,12 +29,12 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" href="index.html">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
               <a class="nav-link" href="financa.html">Finanças</a>
               <a class="nav-link" href="marketing.html">Marketing</a>
               <a class="nav-link" href="projeto.html">Projetos</a>
               <a class="nav-link" href="contato.html">Contato</a>
-              <a class="nav-link" href="perfil.html">Perfil</a>
+              <a class="nav-link active" href="perfil.html">Perfil</a>
             </div>
           </div>
         </div>
