Modificando o conteudo da pagina de inicio

--- a/index.html
+++ b/index.html
@@ -78,10 +78,67 @@
             mais de 2.500 projetos novos apresentados para a Lei de Incentivo ao Esporte (LIE), 
             um número recorde.
           </p>
+          <p>
             Mesmo assim, quando comparamos o nosso país com os outros países da 
             América Latina, podemos percebem uma grande diferença nos investimentos na área 
             esportiva, mesmo países com economias muito piores que a nossa possuem maiores 
             taxas de investimento.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="container mt-4 mb-4">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Objetivos</h5>
+          <p class="card-text">Temos como objetivo fazer a construção de diversas quadras comunitárias pelo 
+            Brasil inteiro, começando pelo estado de São Paulo. Pretendemos também realizar 
+            algumas aulas com professores treinados e altamente capacitados para ensinar 
+            diversos esportes para todas faixas etárias, pegando desde crianças de 6 anos até 
+            pessoas idosas.
+          </p>
+          <p class="card-text">
+            Pretendemos primeiro focar na construção de quadras em escolas públicas e 
+            em comunidades/bairros com menor poder aquisitivo
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="container mt-4 mb-4">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Materiais e métodos</h5>
+          <p class="card-text">Levamos em conta a colaboração de grandes empresas que se interessassem 
+            pela causa e tivessem o interesse em doar quantias e oferecer patrocínios além da 
+            ajuda do governo federal e municipal pelo fato que as quadras serão construídas nos 
+            terrenos das escolas públicas e em terrenos disponibilizados pelo governo e 
+            prefeituras.
+          </p>
+          <p class="card-text">
+            Além de toda uma quadra suportando diferentes esportes, também iremos 
+            contar com uma iluminação que poderá ser gerada por painéis solares e também uma 
+            espécie de almoxarifado com diferentes tipos de materiais esportivos, tendo bolas, 
+            raquetes, jogos de xadrez e dama, redes e etc
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="container mt-4 mb-4">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Conclusões</h5>
+          <p class="card-text">
+            Nosso projeto consiste em uma ONG que recebe ajuda do governo e de 
+            empresas privadas, então não podemos calcular o quanto que vamos ganhar de 
+            doações. 
+          </p>
+          <p class="card-text">
+            Todos os projetos e operações irão passar pela nossa sede que ficará 
+            localizada na cidade de Indaiatuba, contando com um escritório de tamanho médio 
+            pra poucos funcionários e voluntários.
+            O projeto é de grande importância, pois a pratica de esportes vem diminuindo 
+            e mesmo quem quer praticar algum esporte, não possui suporte e assistência para 
+            praticar tal ato. 
           </p>
         </div>
       </div>
