Modificando para ficar compativel com o mobile

--- a/contato.html
+++ b/contato.html
@@ -24,9 +24,9 @@
                 <img src="img/Logo-de-PE.png" alt="Logo" width="35" height="35" class="d-inline-block align-text-top">
                 ARGV
             </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Alterna navegação">
+              <span class="navbar-toggler-icon"></span>
+            </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link" href="index.html">Home</a>
@@ -41,11 +41,11 @@
     </nav>
     <nav class="container mt-4 col-md-3" aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+          <li class="breadcrumb-item "><a href="index.html"  style="color: grey;">Home</a></li>
           <li class="breadcrumb-item active" aria-current="page">Contato</li>
         </ol>
     </nav>
-    <div class="container alert alert-dark" role="alert">
+    <div class="container alert alert-dark col-md-11 col-sm-11 col-11" role="alert">
       Atenção!! Todas as informações presentes são fictícias.
     </div>
 
@@ -61,7 +61,7 @@
                   </div>
                 </div>
           </div>
-          <div class="col-md-6 col-sm-12">
+          <div class="col-md-6 col-sm-12 mt-4">
               <div class="card">
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner">
@@ -93,9 +93,9 @@
           </div>
       </div>
     </div>
-    <div class="container mt-4">
+    <div class="container">
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-6 mt-4">
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Número de telefone</h5>
@@ -104,7 +104,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6 mt-4">
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Email</h5>
@@ -118,11 +118,11 @@
     <div class="container mt-4">
       <h3>funcionários</h3>
       <div class="row mb-4">
-        <button type="button" class="btn btn-lg btn-dark mr-4 mt-2 col-md-2 " data-trigger="focus" data-placement="top" data-toggle="popover" title="Função:" data-content="Marketing">Arthur Maetiase</button>
-        <button type="button" class="btn btn-lg btn-dark mr-4 mt-2 col-md-2 " data-trigger="focus" data-placement="top" data-toggle="popover" title="Função:" data-content="Secretaria e RH">Gabriela Prado</button>
-        <button type="button" class="btn btn-lg btn-dark mr-4 mt-2 col-md-2 " data-trigger="focus" data-placement="top" data-toggle="popover" title="Função:" data-content="Produto">Gustavo Membrive</button>
-        <button type="button" class="btn btn-lg btn-dark mr-4 mt-2 col-md-2 " data-trigger="focus" data-placement="top" data-toggle="popover" title="Função:" data-content="Finanças">Raphael Scapin</button>
-        <button type="button" class="btn btn-lg btn-dark mr-4 mt-2 col-md-2 " data-trigger="focus" data-placement="top" data-toggle="popover" title="Função:" data-content="Lider">Vinicius Porto</button>
+        <button type="button" class="btn btn-lg btn-dark mr-2 ml-2 mt-2 col-md-2 " data-trigger="focus" data-placement="top" data-toggle="popover" title="Função:" data-content="Marketing">Arthur Maetiase</button>
+        <button type="button" class="btn btn-lg btn-dark mr-2 ml-2 mt-2 col-md-2 " data-trigger="focus" data-placement="top" data-toggle="popover" title="Função:" data-content="Secretaria e RH">Gabriela Prado</button>
+        <button type="button" class="btn btn-lg btn-dark mr-2 ml-2 mt-2 col-md-2 " data-trigger="focus" data-placement="top" data-toggle="popover" title="Função:" data-content="Produto">Gustavo Membrive</button>
+        <button type="button" class="btn btn-lg btn-dark mr-2 ml-2 mt-2 col-md-2 " data-trigger="focus" data-placement="top" data-toggle="popover" title="Função:" data-content="Finanças">Raphael Scapin</button>
+        <button type="button" class="btn btn-lg btn-dark mr-2 ml-2 mt-2 col-md-2 " data-trigger="focus" data-placement="top" data-toggle="popover" title="Função:" data-content="Lider">Vinicius Porto</button>
       </div>
     </div>
 
