--- a/financa.html
+++ b/financa.html
@@ -24,9 +24,9 @@
                 <img src="img/Logo-de-PE.png" alt="Logo" width="35" height="35" class="d-inline-block align-text-top">
                 ARGV
             </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Alterna navegação">
+              <span class="navbar-toggler-icon"></span>
+            </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link" href="index.html">Home</a>
@@ -51,7 +51,6 @@
           <th scope="col">#</th>
           <th scope="col">Despesa</th>
           <th scope="col">Valor gasto</th>
-          <th scope="col">Porcentagem</th>
         </tr>
       </thead>
       <tbody>
@@ -59,65 +58,55 @@
           <th scope="row">1</th>
           <td>Aluguel</td>
           <td>R$4.000,00</td>
-          <td></td>
         </tr>
         <tr>
           <th scope="row">2</th>
           <td>Luz</td>
           <td>R$1,680,00</td>
-          <td></td>
         </tr>
         <tr>
           <th scope="row">3</th>
           <td>Água</td>
           <td>R$780,00</td>
-          <td></td>
         </tr>
         <tr>
           <th scope="row">4</th>
           <td>Materiais</td>
           <td>R$620,00</td>
-          <td></td>
         </tr>
         <tr>
           <th scope="row">5</th>
           <td>Materiais esportivos</td>
           <td>R$2.340,00</td>
-          <td></td>
         </tr>
         <tr>
           <th scope="row">6</th>
           <td>Salários</td>
           <td>R$34.166,00</td>
-          <td></td>
         </tr>
         <tr>
           <th scope="row">7</th>
           <td>Eventos de arrecadação</td>
           <td>R$890,00</td>
-          <td></td>
         </tr>
         <tr>
           <th scope="row">8</th>
           <td>Manutenção de quadras</td>
           <td>R$30.000,00</td>
-          <td></td>
         </tr>
         <tr>
           <th scope="row">9</th>
           <td>Projetos</td>
           <td>R$1.000,00</td>
-          <td></td>
         </tr>
         <tr>
           <th scope="row">10</th>
           <td>Ganho mensal</td>
           <td>R$116.666,67</td>
-          <td></td>
         </tr>
       </tbody>
     </table>
-    <div class="card card-body container mt-3 mb-5">
+    <div class="card card-body container col-11 mt-3 mb-5">
       <p class="card-text">
         Não levamos em consideração o IPTU, pois ONG não pagam IPTU e nem IPVA e alguns outros impostos, isso consta de acordo com o artigo 14 da LEI Nº 5.172.
       </p>
