--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <img src="img/Logo-de-PE.png" alt="Logo" width="35" height="35" class="d-inline-block align-text-top">
                 ARGV
             </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Alterna navegação">
+              <span class="navbar-toggler-icon"></span>
+            </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" href="index.html">Home</a>
@@ -46,7 +46,7 @@
     </nav>
     <div class="container">
         <div class="jumbotron col-md-12 col-sm-12">
-            <h1 class="display-4">Projeto de Práticas de Empreendedorismo</h1>
+            <h1 class="display-4" style="font-size: 29pt;">Projeto de Práticas de Empreendedorismo</h1>
             <p class="lead">Este é um site feito para o projeto da materia de PE, dos alunos do 1ºDS da ETEC Martinho Di Ciero, Itu/SP</p>
             <hr class="my-4">
             <p>Tambem será utilizado para uma tarefa de Programação WEB</p>
