--- a/marketing.html
+++ b/marketing.html
@@ -24,9 +24,9 @@
                 <img src="img/Logo-de-PE.png" alt="Logo" width="35" height="35" class="d-inline-block align-text-top">
                 ARGV
             </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Alterna navegação">
+              <span class="navbar-toggler-icon"></span>
+            </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link" href="index.html">Home</a>
@@ -45,17 +45,17 @@
           <li class="breadcrumb-item active" aria-current="page">Marketing</li>
         </ol>
     </nav>
-    <div class="container">
+    <div class="container ">
       <div class="row">
-        <div class="col-md-6 col-sm-12">
+        <div class=" col-md-6 col-sm-12 mb-4">
           <div class="card">
-            <img class="card-img-top" src="img/Folder_1.png" alt="Folder 1" style="width: 500px; height: 500px;">
+            <img class="card-img-top col-12 col-md-12 col-sm-12" src="img/Folder_1.png" alt="Folder 1" style="width: 500px; height: 500px;">
             <div class="card-body">
               <p class="card-text">Um planfleto que faz propaganda sobre a ONG e nossas informações para contato</p>
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-sm-12">
+        <div class="col-12 col-md-6 col-sm-12">
           <div class="card">
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
               <ol class="carousel-indicators">
@@ -64,10 +64,10 @@
               </ol>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img class="d-block w-100" src="img/Folder_2_frente.png" alt="Folder 2 frente" style="width: 500px; height: 500px;">
+                  <img class="d-block w-100 col-12 col-md-12 col-sm-12" src="img/Folder_2_frente.png" alt="Folder 2 frente" >
                 </div>
                 <div class="carousel-item">
-                  <img class="d-block w-100" src="img/Folder_2_verso.png" alt="Folder 2 verso" style="width: 500px; height: 500px;">
+                  <img class="d-block w-100 col-12 col-md-12 col-sm-12" src="img/Folder_2_verso.png" alt="Folder 2 verso" >
                 </div>
               </div>
               <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -85,18 +85,18 @@
           </div>
         </div>
       </div>
-      <div class="row mt-4 mb-4">
-        <div class="col-md-6 col-sm-12">
+      <div class="row">
+        <div class="col-md-6 col-sm-12 mt-4">
           <div class="card">
-            <img class="card-img-top" src="img/Logo-de-PE.png" alt="Folder 1" style="width: 500px; height: 500px;">
+            <img class="card-img-top col-12 col-md-12 col-sm-12" src="img/Logo-de-PE.png" alt="Folder 1" style="width: 500px; height: 500px;">
             <div class="card-body">
               <p class="card-text">A logo da nossa instituição</p>
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-sm-12">
+        <div class="col-md-6 col-sm-12 mt-4 mb-4">
           <div class="card">
-            <img class="card-img-top" src="img/OIP.jpeg" alt="Folder 1" style="width: 500px; height: 425px;">
+            <img class="card-img-top col-12 col-md-12 col-sm-12" src="img/OIP.jpeg" alt="Folder 1" style="width: 500px; height: 425px;">
             <div class="card-body">
               <p class="card-text">01001001 01110011 01110011 01101111 00100000 01101110 11100011 01101111 00100000 01110011 01101001 01100111 01101110 01101001 01100110 01101001 01100011 01100001 00100000 01101110 01100001 01100100 01100001 </p>
             </div>
