Adicionando um Footer e tirando recursos que não são uteis atualmente

--- a/contato.html
+++ b/contato.html
@@ -39,12 +39,6 @@
           </div>
         </div>
     </nav>
-    <nav class="container mt-4 col-md-3" aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item "><a href="index.html"  style="color: grey;">Home</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Contato</li>
-        </ol>
-    </nav>
     <div class="container alert alert-dark col-md-11 col-sm-11 col-11" role="alert">
       Atenção!! Todas as informações presentes são fictícias.
     </div>
@@ -115,7 +109,7 @@
         </div>
       </div>
     </div>
-    <div class="container mt-4">
+    <div id="funcoes" class="container mt-4">
       <h3>funcionários</h3>
       <div class="row mb-4">
         <button type="button" class="btn btn-lg btn-dark mr-2 ml-2 mt-2 col-md-2 " data-trigger="focus" data-placement="top" data-toggle="popover" title="Função:" data-content="Marketing">Arthur Maetiase</button>
@@ -125,6 +119,25 @@
         <button type="button" class="btn btn-lg btn-dark mr-2 ml-2 mt-2 col-md-2 " data-trigger="focus" data-placement="top" data-toggle="popover" title="Função:" data-content="Lider">Vinicius Porto</button>
       </div>
     </div>
+    <footer class="footer bg-dark mt-auto py-3">
+      <div class="container">
+        <div class="row">
+          <div style="color: whitesmoke;" class="container">
+            <img src="img/Logo-de-PE.png" alt="Logo" width="40px">
+            ARGV
+          </div>
+          <div style="color: whitesmoke;" class="col-lg-12">
+            <ul class="container-fluid list-inline text-center">
+              <li class="list-inline-item"><a href="contato.html">Sobre</a></li>
+              <li class="list-inline-item"><a href="contato.html">Contato</a></li>
+              <li class="list-inline-item"><a href="">Termos de uso</a></li>
+              <li class="list-inline-item"><a href="">Política de privacidade</a></li>
+            </ul>
+            <p class="copyright">© 2023 Criado por <a href="https://github.com/Vini150cius">Vini150cius</a></p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
