--- a/financa.html
+++ b/financa.html
@@ -39,12 +39,6 @@
           </div>
         </div>
     </nav>
-    <nav class="container mt-4 col-md-3" aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Finanças</li>
-        </ol>
-    </nav>
     <table class="table container mt-5">
       <thead class="thead-dark">
         <tr>
@@ -111,6 +105,25 @@
         Não levamos em consideração o IPTU, pois ONG não pagam IPTU e nem IPVA e alguns outros impostos, isso consta de acordo com o artigo 14 da LEI Nº 5.172.
       </p>
     </div>
+    <footer class="footer bg-dark mt-auto py-3">
+      <div class="container">
+        <div class="row">
+          <div style="color: whitesmoke;" class="container">
+            <img src="img/Logo-de-PE.png" alt="Logo" width="40px">
+            ARGV
+          </div>
+          <div style="color: whitesmoke;" class="col-lg-12">
+            <ul class="container-fluid list-inline text-center">
+              <li class="list-inline-item"><a href="contato.html">Sobre</a></li>
+              <li class="list-inline-item"><a href="contato.html">Contato</a></li>
+              <li class="list-inline-item"><a href="">Termos de uso</a></li>
+              <li class="list-inline-item"><a href="">Política de privacidade</a></li>
+            </ul>
+            <p class="copyright">© 2023 Criado por <a href="https://github.com/Vini150cius">Vini150cius</a></p>
+          </div>
+        </div>
+      </div>
+    </footer>
     
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
