--- a/projeto.html
+++ b/projeto.html
@@ -39,13 +39,7 @@
           </div>
         </div>
     </nav>
-    <nav class="container mt-4 col-md-3" aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Projeto</li>
-        </ol>
-    </nav>
-    <div class="container">
+    <div class="container mt-5" style="margin-bottom: 348px;">
         <div class="jumbotron col-md-12 col-sm-12">
             <h1 class="display-4">Em breve...</h1>
             <p class="lead">Ainda não pensamos a fundo sobre onde iremos fazer nossos primeiros projetos e nem como...</p>
@@ -53,7 +47,25 @@
             <p>Em um futuro muito breve iremos atualizar esse seção, então fique atento...</p>
         </div>
     </div>
-    
+    <footer class="footer bg-dark mt-auto py-3">
+      <div class="container">
+        <div class="row">
+          <div style="color: whitesmoke;" class="container">
+            <img src="img/Logo-de-PE.png" alt="Logo" width="40px">
+            ARGV
+          </div>
+          <div style="color: whitesmoke;" class="col-lg-12">
+            <ul class="container-fluid list-inline text-center">
+              <li class="list-inline-item"><a href="contato.html">Sobre</a></li>
+              <li class="list-inline-item"><a href="contato.html">Contato</a></li>
+              <li class="list-inline-item"><a href="">Termos de uso</a></li>
+              <li class="list-inline-item"><a href="">Política de privacidade</a></li>
+            </ul>
+            <p class="copyright">© 2023 Criado por <a href="https://github.com/Vini150cius">Vini150cius</a></p>
+          </div>
+        </div>
+      </div>
+    </footer>
     
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
