--- a/index.html
+++ b/index.html
@@ -39,18 +39,11 @@
           </div>
         </div>
     </nav>
-    <nav class="container mt-4 col-md-3" aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item active" aria-current="page">Home</li>
-        </ol>
-    </nav>
     <div class="container">
         <div class="jumbotron col-md-12 col-sm-12">
             <h1 class="display-4" style="font-size: 29pt;">Projeto de Práticas de Empreendedorismo</h1>
             <p class="lead">Este é um site feito para o projeto da materia de PE, dos alunos do 1ºDS da ETEC Martinho Di Ciero, Itu/SP</p>
             <hr class="my-4">
-            <p>Tambem será utilizado para uma tarefa de Programação WEB</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Leia mais</a>
         </div>
     </div>
     <div class="container mt-4 mb-4">
@@ -143,7 +136,25 @@
         </div>
       </div>
     </div>
-    
+    <footer class="footer bg-dark mt-auto py-3">
+      <div class="container">
+        <div class="row">
+          <div style="color: whitesmoke;" class="container">
+            <img src="img/Logo-de-PE.png" alt="Logo" width="40px">
+            ARGV
+          </div>
+          <div style="color: whitesmoke;" class="col-lg-12">
+            <ul class="container-fluid list-inline text-center">
+              <li class="list-inline-item"><a href="contato.html">Sobre</a></li>
+              <li class="list-inline-item"><a href="contato.html">Contato</a></li>
+              <li class="list-inline-item"><a href="">Termos de uso</a></li>
+              <li class="list-inline-item"><a href="">Política de privacidade</a></li>
+            </ul>
+            <p class="copyright">© 2023 Criado por <a href="https://github.com/Vini150cius">Vini150cius</a></p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
