--- a/perfil.html
+++ b/perfil.html
@@ -39,12 +39,6 @@
           </div>
         </div>
     </nav>
-    <nav class="container mt-4 col-md-3" aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Perfil</li>
-        </ol>
-    </nav>
     <div class="container mt-4 mb-4 col-md-6 col-sm-12">
     <form method="get">
       <div class="form-group">
@@ -80,7 +74,25 @@
       <button type="submit" class="btn btn-primary">Enviar</button>
     </form>
     </div>
-    <footer></footer>
+    <footer class="footer bg-dark mt-auto py-3">
+      <div class="container">
+        <div class="row">
+          <div style="color: whitesmoke;" class="container">
+            <img src="img/Logo-de-PE.png" alt="Logo" width="40px">
+            ARGV
+          </div>
+          <div style="color: whitesmoke;" class="col-lg-12">
+            <ul class="container-fluid list-inline text-center">
+              <li class="list-inline-item"><a href="contato.html">Sobre</a></li>
+              <li class="list-inline-item"><a href="contato.html">Contato</a></li>
+              <li class="list-inline-item"><a href="">Termos de uso</a></li>
+              <li class="list-inline-item"><a href="">Política de privacidade</a></li>
+            </ul>
+            <p class="copyright">© 2023 Criado por <a href="https://github.com/Vini150cius">Vini150cius</a></p>
+          </div>
+        </div>
+      </div>
+    </footer>
     
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
