Adicionando a Loja e excluindo o perfil

--- a/projeto.html
+++ b/projeto.html
@@ -34,7 +34,7 @@
               <a class="nav-link" href="marketing.html">Marketing</a>
               <a class="nav-link active" href="projeto.html">Projetos</a>
               <a class="nav-link" href="contato.html">Contato</a>
-              <a class="nav-link" href="perfil.html">Perfil</a>
+              <a class="nav-link" href="loja.html">Loja</a>
             </div>
           </div>
         </div>
