--- a/loja.html
+++ b/loja.html
@@ -34,46 +34,26 @@
               <a class="nav-link" href="marketing.html">Marketing</a>
               <a class="nav-link" href="projeto.html">Projetos</a>
               <a class="nav-link" href="contato.html">Contato</a>
-              <a class="nav-link active" href="perfil.html">Perfil</a>
+              <a class="nav-link active" href="loja.html">Loja</a>
             </div>
           </div>
         </div>
     </nav>
-    <div class="container mt-4 mb-4 col-md-6 col-sm-12">
-    <form method="get">
-      <div class="form-group">
-        <label for="exampleInput">Nome completo</label>
-        <input type="text" class="form-control" id="nameuser" placeholder="Seu nome">
+    <div class="row">
+      <div class="col-2">
+        <div class="nav flex-column nav-pills" role="tablist" aria-orientation="vertical">
+          <a class="nav-link active" data-toggle="pill" href="loja.html" role="tab" aria-controls="v-pills-home" aria-selected="true">Home</a>
+          <a class="nav-link" data-toggle="pill" href="pags/camiseta.html" role="tab" aria-controls="v-pills-home" aria-selected="false">Camisetas</a>
+          <a class="nav-link" data-toggle="pill" href="pags/blusa.html" role="tab" aria-controls="v-pills-profile" aria-selected="false">Blusas</a>
+          <a class="nav-link" data-toggle="pill" href="pags/bone.html" role="tab" aria-controls="v-pills-messages" aria-selected="false">Bonés</a>
+          <a class="nav-link" data-toggle="pill" href="pags/chaveiro.html" role="tab" aria-controls="v-pills-settings" aria-selected="false">Chaveiros</a>
+          <a class="nav-link" data-toggle="pill" href="pags/garrafa.html" role="tab" aria-controls="v-pills-settings" aria-selected="false">Garrafas</a>
+          <a class="nav-link" data-toggle="pill" href="pags/" role="tab" aria-controls="v-pills-settings" aria-selected="false">COISAS</a>
+        </div>
       </div>
-      <div class="form-group">
-        <label for="exampleInput">CPF</label>
-        <input type="text" class="form-control" id="CPFuser" placeholder="Seu CPF" maxlength="15">
-      </div>
-      <div class="form-group">
-        <label for="exampleInputEmail1">Endereço de email</label>
-        <input type="email" class="form-control" id="inputemail" name="inputemail" aria-describedby="emailHelp" placeholder="Seu email">
-        <small id="emailHelp" class="form-text text-muted">Nunca vamos compartilhar seu email, com ninguém.</small>
-      </div>
-      <div class="form-group">
-        <label for="exampleInputPassword1">Senha</label>
-        <input type="password" class="form-control" id="Password" name="Password" placeholder="Senha">
-      </div>
-      <div class="form-group form-check">
-        <input type="checkbox" class="form-check-input" id="vepass">
-        <label class="form-check-label" for="exampleCheck1">Ver senha</label>
-      </div>
-      <div class="form-group form-check" style="padding: 0%;">
-        <label class="form-check-label" for="exampleCheck1">Selecionar função</label>
-        <select class="form-control" name="funcao" id="funcao">
-          <option selected disabled>Selecionar</option>
-          <option>Doador</option>
-          <option>Voluntário</option>
-          <option>Funcionario</option>
-        </select>
-      </div>
-      <button type="submit" class="btn btn-primary">Enviar</button>
-    </form>
     </div>
+
+
     <footer class="footer bg-dark mt-auto py-3">
       <div class="container">
         <div class="row">
