Adicionando a base da loja e links ate ela

--- a/loja.html
+++ b/loja.html
@@ -9,6 +9,7 @@
 		<meta name="description" content="Uma ONG com o intuito de elevar o nível de conhecimento e profissionalismo na área dos esportes, alcançar o nível técnico perdido com o passar do tempo, abrir portas para aqueles com potencial e para os que não tem muitas condições de ir além.">
     <link rel="shortcut icon" href="img/Logo-de-PE.png" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>ARGV | Perfil</title>
 </head>
 <body>
@@ -40,20 +41,98 @@
         </div>
     </nav>
     <div class="row">
-      <div class="col-2">
+      <div class="col-2" style="height: 725px;">
         <div class="nav flex-column nav-pills" role="tablist" aria-orientation="vertical">
-          <a class="nav-link active" data-toggle="pill" href="loja.html" role="tab" aria-controls="v-pills-home" aria-selected="true">Home</a>
-          <a class="nav-link" data-toggle="pill" href="pags/camiseta.html" role="tab" aria-controls="v-pills-home" aria-selected="false">Camisetas</a>
-          <a class="nav-link" data-toggle="pill" href="pags/blusa.html" role="tab" aria-controls="v-pills-profile" aria-selected="false">Blusas</a>
-          <a class="nav-link" data-toggle="pill" href="pags/bone.html" role="tab" aria-controls="v-pills-messages" aria-selected="false">Bonés</a>
-          <a class="nav-link" data-toggle="pill" href="pags/chaveiro.html" role="tab" aria-controls="v-pills-settings" aria-selected="false">Chaveiros</a>
-          <a class="nav-link" data-toggle="pill" href="pags/garrafa.html" role="tab" aria-controls="v-pills-settings" aria-selected="false">Garrafas</a>
-          <a class="nav-link" data-toggle="pill" href="pags/" role="tab" aria-controls="v-pills-settings" aria-selected="false">COISAS</a>
+          <a class="nav-link active" href="loja.html">Home</a>
+          <a class="nav-link" href="pags/camiseta.html">Camisetas</a>
+          <a class="nav-link" href="pags/blusa.html">Blusas</a>
+          <a class="nav-link" href="pags/bone.html">Bonés</a>
+          <a class="nav-link" href="pags/chaveiro.html">Chaveiros</a>
+          <a class="nav-link" href="pags/garrafa.html">Garrafas</a>
+          <a class="nav-link" href="pags/">COISAS</a>
         </div>
       </div>
+    
+    <div class="container">
+      <div class="row">
+        <div class="card mb-3 mr-4 mt-3" style="max-width: 540px;">
+          <div class="row g-0">
+            <div class="col-sm-8 col-md-4">
+              <img src="https://normauniformes.com/img/products/41257_camisa-azul-rayas(1).jpg" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <button><a href="cam-1"><div class="default-btn">
+                    <span>Visualizar</span></div>
+                  <div class="hover-btn">
+                    <span>Comprar</span></div></a>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card mb-3  mt-3" style="max-width: 540px;">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="https://normauniformes.com/img/products/41257_camisa-azul-rayas(1).jpg" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <button><a href="cam-2"><div class="default-btn">
+                  <span>Visualizar</span></div>
+                <div class="hover-btn">
+                  <span>Comprar</span></div></a>
+              </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>    
+      <div class="row">
+        <div class="card mb-3 mr-4 mt-3" style="max-width: 540px;">
+          <div class="row g-0">
+            <div class="col-sm-8 col-md-4">
+              <img src="https://normauniformes.com/img/products/41257_camisa-azul-rayas(1).jpg" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <button><a href="cam-1"><div class="default-btn">
+                    <span>Visualizar</span></div>
+                  <div class="hover-btn">
+                    <span>Comprar</span></div></a>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card mb-3 mt-3" style="max-width: 540px;">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="https://normauniformes.com/img/products/41257_camisa-azul-rayas(1).jpg" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <button><a href="cam-2"><div class="default-btn">
+                  <span>Visualizar</span></div>
+                <div class="hover-btn">
+                  <span>Comprar</span></div></a>
+              </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>      
     </div>
-
-
+    </div>
     <footer class="footer bg-dark mt-auto py-3">
       <div class="container">
         <div class="row">
