Correção de erros

--- a/pags/cam-1.html
+++ b/pags/cam-1.html
@@ -32,18 +32,18 @@
             </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link" href="index.html">Home</a>
-              <a class="nav-link" href="financa.html">Finanças</a>
-              <a class="nav-link" href="marketing.html">Marketing</a>
-              <a class="nav-link" href="projeto.html">Projetos</a>
-              <a class="nav-link" href="contato.html">Contato</a>
-              <a class="nav-link active" href="loja.html">Loja</a>
+              <a class="nav-link" href="../index.html">Home</a>
+              <a class="nav-link" href="../financa.html">Finanças</a>
+              <a class="nav-link" href="../marketing.html">Marketing</a>
+              <a class="nav-link" href="../projeto.html">Projetos</a>
+              <a class="nav-link" href="../contato.html">Contato</a>
+              <a class="nav-link active" href="../loja.html">Loja</a>
             </div>
           </div>
         </div>
     </nav>
     <div class="row">
-      <div>
+      <div class="col-sm-2 col-md-2">
         <div class="nav flex-column nav-pills" role="tablist" aria-orientation="vertical">
           <a class="nav-link" href="../loja.html">Home</a>
           <a class="nav-link active" href="camiseta.html">Camisetas</a>
@@ -54,7 +54,7 @@
           <a class="nav-link" href="">COISAS</a>
         </div>
       </div>
-    <div class="col-8">
+    <div class="col-md-9 col-sm-11">
       <div class="container col-md-9">
 
         <div class="row">
@@ -73,12 +73,12 @@
               Tamanhos: P, M, G, GG
               Cores: Azul, Branco, Preto
             </p>
-            <div class="alert alert-success col-5" role="alert">
+            <div class="alert alert-success col-7" role="alert">
               Preço: R$ 100.00
             </div>
     
             <div class="row">
-              <div class="mr-5 mb-4">
+              <div class="ml-3 mr-5 mb-4">
                 <a class="btn btn-primary" style="color: whitesmoke;">Comprar</a>
               </div>
               <div>
@@ -89,7 +89,7 @@
             <div class="row mt-4">
               <div class="col-md-12">
                 <h3>Mais detalhes</h3>
-                <p style="height: 273px;">
+                <p style="height: 300px;">
                   Essa camisa é mais do que uma peça de roupa. É um símbolo de esperança e transformação. Com a compra dessa camisa, você está ajudando a construir quadras comunitárias em áreas sem condições.
                 </p>
               </div>
