--- a/pags/camiseta.html
+++ b/pags/camiseta.html
@@ -68,7 +68,7 @@
               <div class="card-body">
                 <h5 class="card-title">Camiseta com quadras</h5>
                 <p class="card-text">Essa camisa é mais do que uma peça de roupa. É um símbolo de esperança e transformação. Com a compra dessa camisa, você está ajudando a construir quadras comunitárias em áreas sem condições.</p>
-                <button><a href="cam-1.html"><div class="default-btn">
+                <button><a href="pags/cam-1.html"><div class="default-btn">
                     <span>Visualizar</span></div>
                   <div class="hover-btn">
                     <span>Comprar</span></div></a>
