Adicionando paginas e produtos

--- a/pags/chaveiro.html
+++ b/pags/chaveiro.html
@@ -7,10 +7,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
 		<meta name="keywords" content="ONG, esportes, ARGV, PE, Empreendedorismo, Praticas de Empreendedorismo, Vinicius Porto.">
 		<meta name="description" content="Uma ONG com o intuito de elevar o nível de conhecimento e profissionalismo na área dos esportes, alcançar o nível técnico perdido com o passar do tempo, abrir portas para aqueles com potencial e para os que não tem muitas condições de ir além.">
-    <link rel="shortcut icon" href="img/Logo-de-PE.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/Logo-de-PE.png" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <title>ARGV | Loja</title>
+    <link rel="stylesheet" href="../style.css">
+    <title>ARGV | Loja | Chaveiros</title>
 </head>
 <body>
   <style>
@@ -30,7 +30,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #03588C;">
         <div class="container-fluid">
             <a class="navbar-brand text-center" href="index.html">
-                <img id="logo" src="img/Logo-de-PE.png" alt="Logo" width="35" height="35" class="d-inline-block align-text-top">
+                <img id="logo" src="../img/Logo-de-PE.png" alt="Logo" width="35" height="35" class="d-inline-block align-text-top">
                 ARGV
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Alterna navegação">
@@ -49,30 +49,30 @@
         </div>
     </nav>
     <div class="row">
-      <div class="col-2" style="height: 725px;">
+      <div class="col-2">
         <div class="nav flex-column nav-pills" role="tablist" aria-orientation="vertical">
-          <a class="nav-link active" href="loja.html">Home</a>
-          <a class="nav-link" href="pags/camiseta.html">Camisetas</a>
-          <a class="nav-link" href="pags/blusa.html">Blusas</a>
-          <a class="nav-link" href="pags/bone.html">Bonés</a>
-          <a class="nav-link" href="pags/chaveiro.html">Chaveiros</a>
-          <a class="nav-link" href="pags/garrafa.html">Garrafas</a>
-          <a class="nav-link" href="pags/">COISAS</a>
+          <a class="nav-link" href="../loja.html">Home</a>
+          <a class="nav-link" href="camiseta.html">Camisetas</a>
+          <a class="nav-link" href="blusa.html">Blusas</a>
+          <a class="nav-link" href="bone.html">Bonés</a>
+          <a class="nav-link active" href="chaveiro.html">Chaveiros</a>
+          <a class="nav-link" href="garrafa.html">Garrafas</a>
+          <a class="nav-link" href="">COISAS</a>
         </div>
       </div>
     
-    <div class="container">
+    <div class="container mb-5">
       <div class="row">
         <div class="card mb-3 mr-4 mt-3" style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-sm-8 col-md-4">
-              <img src="img/Imagem do WhatsApp de 2023-11-06 à(s) 12.00.33_1efb5524.jpg" class="img-fluid rounded-start" alt="...">
+              <img src="../img/cha1.jpg" class="img-fluid rounded-start" alt="...">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Camiseta com quadras</h5>
+                <h5 class="card-title">Chaveiro de quadra</h5>
                 <p class="card-text">Essa camisa é mais do que uma peça de roupa. É um símbolo de esperança e transformação. Com a compra dessa camisa, você está ajudando a construir quadras comunitárias em áreas sem condições.</p>
-                <button><a href="pags/cam-1.html"><div class="default-btn">
+                <button><a href="cam-1.html"><div class="default-btn">
                     <span>Visualizar</span></div>
                   <div class="hover-btn">
                     <span>Comprar</span></div></a>
@@ -84,13 +84,13 @@
         <div class="card mb-3  mt-3" style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-md-4">
-              <img src="img/Imagem do WhatsApp de 2023-11-06 à(s) 12.00.58_760dfd3d.jpg" class="img-fluid rounded-start" alt="...">
+              <img src="../img/cha2.jpg" class="img-fluid rounded-start" alt="...">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Camisa de basquete</h5>
+                <h5 class="card-title">Chaveiro bola de basquete</h5>
                 <p class="card-text">O esporte é uma ferramenta poderosa de inclusão social. Ele promove a saúde, a educação e a cidadania. As quadras comunitárias são espaços essenciais para a prática esportiva, especialmente em áreas onde as crianças e jovens têm poucas oportunidades.</p>
-                <button><a href="cam-2"><div class="default-btn">
+                <button><a href="cam-2.html"><div class="default-btn">
                   <span>Visualizar</span></div>
                 <div class="hover-btn">
                   <span>Comprar</span></div></a>
@@ -104,13 +104,13 @@
         <div class="card mb-3 mr-4 mt-3" style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-sm-8 col-md-4">
-              <img src="img/Imagem do WhatsApp de 2023-11-06 à(s) 12.00.58_a31eb86a.jpg" class="img-fluid rounded-start" alt="...">
+              <img src="../img/cha3.jpg" class="img-fluid rounded-start" alt="...">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Camiseta de Vôlei</h5>
+                <h5 class="card-title">Chaveiro de Vôlei</h5>
                 <p class="card-text">A sua camisa é mais do que uma camiseta. É um investimento no futuro de crianças e jovens de todo o Brasil. Ao comprar essa camisa, você está ajudando a construir um mundo mais justo e igualitário.</p>
-                <button><a href="cam-3"><div class="default-btn">
+                <button><a href="cam-3.html"><div class="default-btn">
                     <span>Visualizar</span></div>
                   <div class="hover-btn">
                     <span>Comprar</span></div></a>
@@ -122,13 +122,13 @@
         <div class="card mb-3 mt-3" style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-md-4">
-              <img src="img/Imagem do WhatsApp de 2023-11-06 à(s) 12.13.50_5fa7ddc7.jpg" class="img-fluid rounded-start" alt="...">
+              <img src="../img/cha4.jpg" class="img-fluid rounded-start" alt="...">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Camiseta de um time de vôlei</h5>
+                <h5 class="card-title">Chaveiro, quadras e basquete</h5>
                 <p class="card-text">Abrace a causa da construção de quadras comunitárias e faça a diferença na vida de crianças e jovens de todo o Brasil. Compre a sua camisa "Construindo o futuro" e ajude a construir um mundo melhor.</p>
-                <button><a href="cam-4"><div class="default-btn">
+                <button><a href="cam-4.html"><div class="default-btn">
                   <span>Visualizar</span></div>
                 <div class="hover-btn">
                   <span>Comprar</span></div></a>
@@ -145,7 +145,7 @@
       <div class="container">
         <div class="row">
           <div style="color: whitesmoke;" class="container">
-            <img src="img/Logo-de-PE.png" alt="Logo" width="40px">
+            <img src="../img/Logo-de-PE.png" alt="Logo" width="40px">
             ARGV
           </div>
           <div style="color: whitesmoke;" class="col-lg-12">
