--- a/pags/camiseta.html
+++ b/pags/camiseta.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
 		<meta name="keywords" content="ONG, esportes, ARGV, PE, Empreendedorismo, Praticas de Empreendedorismo, Vinicius Porto.">
 		<meta name="description" content="Uma ONG com o intuito de elevar o nível de conhecimento e profissionalismo na área dos esportes, alcançar o nível técnico perdido com o passar do tempo, abrir portas para aqueles com potencial e para os que não tem muitas condições de ir além.">
-    <link rel="shortcut icon" href="img/Logo-de-PE.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/Logo-de-PE.png" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css">
     <title>ARGV | Loja | Camisetas</title>
@@ -21,12 +21,16 @@
       border-radius: 5px;
       margin-top: 20px;
     }
+    #logo {
+      border-radius: 0;
+      margin-top: 0;
+    }
 
   </style>
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #03588C;">
         <div class="container-fluid">
             <a class="navbar-brand text-center" href="index.html">
-                <img src="../img/Logo-de-PE.png" alt="Logo" width="35" height="35" class="d-inline-block align-text-top">
+                <img id="logo" src="../img/Logo-de-PE.png" alt="Logo" width="35" height="35" class="d-inline-block align-text-top">
                 ARGV
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Alterna navegação">
@@ -45,7 +49,7 @@
         </div>
     </nav>
     <div class="row">
-      <div class="col-2" style="height: 725px;">
+      <div class="col-2">
         <div class="nav flex-column nav-pills" role="tablist" aria-orientation="vertical">
           <a class="nav-link" href="../loja.html">Home</a>
           <a class="nav-link active" href="camiseta.html">Camisetas</a>
@@ -57,7 +61,7 @@
         </div>
       </div>
     
-    <div class="container">
+    <div class="container mb-5">
       <div class="row">
         <div class="card mb-3 mr-4 mt-3" style="max-width: 540px;">
           <div class="row g-0">
@@ -68,7 +72,7 @@
               <div class="card-body">
                 <h5 class="card-title">Camiseta com quadras</h5>
                 <p class="card-text">Essa camisa é mais do que uma peça de roupa. É um símbolo de esperança e transformação. Com a compra dessa camisa, você está ajudando a construir quadras comunitárias em áreas sem condições.</p>
-                <button><a href="pags/cam-1.html"><div class="default-btn">
+                <button><a href="cam-1.html"><div class="default-btn">
                     <span>Visualizar</span></div>
                   <div class="hover-btn">
                     <span>Comprar</span></div></a>
